tests/semantic/fail/function-6.tiger
let
	function a () = ()
	var b : int := 0
in
	b := a ()
end
